--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,20 +1,13 @@
 input {
-	beats {
-		port => 5044
-	}
-
-	tcp {
-		port => 5000
-	}
+  udp {
+    port => 5014
+    type => syslog
+  }
 }
 
-## Add your filters / logstash plugins configuration here
-
 output {
-	elasticsearch {
-		hosts => "elasticsearch:9200"
-		user => "elastic"
-		password => "changeme"
-		ecs_compatibility => disabled
-	}
+  elasticsearch {
+    hosts => ["http://elasticsearch:9200"]
+    index => "netlogstash-%{+YYY.MM.dd}"
+  }
 }
